# slint-todo-demo

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
ui/: app.slint
